fixing some spacing

--- a/src/App.css
+++ b/src/App.css
@@ -140,6 +140,14 @@ nav ul li { /* this is referencing the navbar text */
 
 /**************************************** ABOUT ME ****************************************/
 
+#About-Me {
+margin-bottom: 0rem;
+}
+
+.container-about {
+  margin: 5rem 2rem 0rem 2rem;
+  text-align: center;
+}
 
 .header-about {
   text-align: left;
@@ -186,12 +194,6 @@ p {
     align-items: center;
     margin-left: 1rem;
     margin: 5rem 2rem 5rem 5rem;
-  }
-
-  .container-about {
-    margin: 5rem 2rem 5rem 2rem;
-    text-align: center;
-    margin-bottom: 3rem;
   }
 
   .header-about {
